# teddynote-parser-api-client

./: .env.example  .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.ipynb
example/: parse_pdf.ipynb
scripts/: publish.sh
teddynote_parser_client/: __init__.py  __main__.py  cli.py  client.py
teddynote_parser_client/tests/: __init__.py  test_client.py
